--- a/idstyle2.css
+++ b/idstyle2.css
@@ -17,10 +17,16 @@ body {
 }
 #wrapper {
   padding-top: 30px;
-  width: 70%;
+  width: 55%;
   margin: 0 auto;
   text-align: center;
 }
+#wrapper2 {
+  width: 55%;
+  margin: 0 auto;
+  text-align: center;
+}
+
 th {
   font-size: 20px;
 }
@@ -38,9 +44,16 @@ table {
   margin-bottom: 30px;
 }
 .box {
-  margin: auto;
   align-items: center;
-  width: 33%;
+  width: 40%;
+  height: 180px;
+  border: thin black solid;
+  display: inline-block;
+}
+
+.box2 {
+  align-items: center;
+  width: 40%;
   height: 180px;
   border: thin black solid;
   display: inline-block;
@@ -59,7 +72,6 @@ button {
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 1px;
-  margin-bottom: 1px;
 }
 
 #toka {
@@ -71,7 +83,6 @@ button {
   background-image: url("https://icons.iconarchive.com/icons/hopstarter/button/128/Button-Add-icon.png");
   background-repeat: no-repeat;
   background-position: center;
-  margin-bottom: 1px;
 }
 
 #kolmas {
